examples/demo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
  namespace: argoplane-demo
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: guestbook-ui
